# UHERobot

./: .gitattributes  .gitignore  CommandList.h  README.txt  acme-arietta.dtb  arietta.cmake  nginx_config
HW_RobotBoard2/: RB1_v2.GBL  RB1_v2.GBO  RB1_v2.GBP  RB1_v2.GBS  RB1_v2.GML  RB1_v2.GTL  RB1_v2.GTO  RB1_v2.GTP  RB1_v2.GTS  RB1_v2.TXT  RB1_v2.brd  RB1_v2.gpi  RB1_v2.sch  eagle.epf
HW_RobotBoard4/: RobotBoard4.brd  RobotBoard4.sch  eagle.epf
RobotBoard4/: RobotBoard4.atsln  RobotBoard4.atsuo
RobotBoardMini3/: RobotBoardMini3.atsln  RobotBoardMini3.atsuo
RobotControlBoard/: CommandList.h  CommandReceiver.cpp  CommandReceiver.h  MotorControlLib.cpp  MotorControlLib.h  RobotBoardMini3.atsuo  RobotControlBoard.ino
RobotControlBoard2/: RobotControlBoard2.atsln  RobotControlBoard2.atsuo
RobotControlBoardHW/: RobotControlBoard.brd  RobotControlBoard.sch
RobotControlDaemon/: .sconsign.dblite  CMakeLists.txt  ControlLogic.cpp  ControlLogic.h  DataExchangeStructures.h  MessageParser.cpp  MessageParser.h  RobotControlDaemon.pro  SConstruct  base16message.cpp  base16message.h  debuglog.cpp  debuglog.h  main.cpp  pipemessager.cpp  pipemessager.h  robotboard2interpreter.cpp  robotboard2interpreter.h
RobotControlDaemon/fcgiServer/: CMakeLists.txt  fcgiserver.cpp  fcgiserver.h  fcgiserviceif.h
StaticWebContent/: index.html
daemon_build_scripts/: build.sh  deploy.sh  install_target_scripts.sh  mount_fs_image.sh
docu/: BoardCommunication.txt  BoardCommunicationV2.txt  WebInterfaceCommunication.txt
fcgi_test/: .sconsign.dblite  SConstruct  main.cpp  test1.cpp
(+56 files in other folders)
